--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   adaptive_theme: ^3.7.0
   dotted_border: ^2.1.0
+  firebase_auth: ^5.5.3
   firebase_core: ^3.13.0
   firebase_database: ^11.3.5
   flutter:
